--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17,6 +17,8 @@
 /****************/
 html {
     font-family: 'Source Sans Pro', sans-serif;
+	background-color: var(--background-color);
+	color: var(--text-color);
     box-sizing: border-box;
     font-weight: 400;
 	font-size: 16px;
@@ -30,6 +32,7 @@ body {
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Raleway', sans-serif;
+    text-align:center;
 }
 
 a { 
@@ -78,9 +81,6 @@ a:visited {  }
 }
 .m-auto {
 	margin: auto;
-}
-.text-center {
-	text-align: center;
 }
 /**************/
 /*   Header   */
