--- a/public/css/app.css
+++ b/public/css/app.css
@@ -69,6 +69,14 @@ a:visited {  }
     width: 1px;
     height: 1px;
 }
+.text-upper {
+	text-transform: uppercase;
+}
+section[class $= "-section"] {
+	width: 80%;
+	margin: auto;
+	margin-top: 4rem;
+}
 
 /*****************/
 /*   Utilities   */
@@ -82,6 +90,7 @@ a:visited {  }
 .m-auto {
 	margin: auto;
 }
+
 /**************/
 /*   Header   */
 /**************/
