--- a/public/css/app.css
+++ b/public/css/app.css
@@ -71,6 +71,59 @@ a:visited {  }
 	display: block;
 	padding: 1rem;
 }
+.btn {
+	background-color: var(--background-color);
+	color:var(--text-color);
+	border: 2px solid var(--text-color);
+	padding: 0.75rem 1rem;
+	border-radius: 0.5rem;
+}
+.btn:hover {
+	background-color: var(--text-color);
+	color:var(--background-color);
+	border-color: var(--background-color);
+	cursor: pointer;
+	font-weight:600;
+}
+.add-btn-cont {
+	justify-content: right;
+	margin-bottom: 1rem;
+}
+.add-btn {
+	background-color: transparent;
+	border: 2px solid var(--text-color);
+	border-radius: 50%;
+	width: 3rem;
+	height: 3rem;
+	padding:0.5rem;
+	margin-right: 5rem;
+}
+.add-btn:hover {
+	background-color: var(--text-color);
+	border-color: var(--background-color);
+	cursor:pointer;
+}
+.add-btn:hover > fa {
+	color: var(--background-color);
+}
+.add-btn > fa {
+	font-size:1.5rem;
+	color: var(--text-color);
+}
+.edit-btn, .delete-btn {
+	background-color: transparent;
+	border: none;
+	width: 2rem;
+	margin: 0rem 0.5rem;
+}
+.edit-btn:hover, .delete-btn:hover {
+	cursor: pointer;
+}
+.edit-btn > fa, .delete-btn > fa {
+	font-size:1.75rem;
+	color: var(--text-color);
+	font-weight:unset;
+}
 .text-center {
 	text-align: center;
 }
