Faculty assigned roles can be updated for the current program. Moved the update roles from the /pm/humber page to the /pm/faculty/update page. Changed the active production check from 'true' to '1' to match database value.

--- a/public/css/faculty/list.css
+++ b/public/css/faculty/list.css
@@ -3,9 +3,9 @@ form {
 	width: 75vw;
 	margin:auto;
 }
-#active-program__text {
-	padding-left:2.5rem;
-	text-align: left;
+#active-faculty__link {
+	text-align: center;
+	display: block;
 }
 .member-row {
 	position: relative;
