--- a/public/css/humber/edit.css
+++ b/public/css/humber/edit.css
@@ -1,13 +1,20 @@
+#active-faculty__link {
+	text-align: center;
+	display: block;
+}
 form {
 	text-align: center;
 	width: 75vw;
 	margin:4rem auto;
 }
+.miscellandeous-section {
+	margin: 2.5rem auto;
+}
 .miscellandeous-section > label {
 	font-family: 'Raleway', sans-serif;
 	font-weight: bold;
 	font-size: 1.5rem;
-	margin: 1.5rem auto;
+	margin-bottom: 1.5rem;
 	display: block;
 }
 .miscellandeous-section > textarea {
