Admin can add a new faculty member. Moved common form styling to global stylesheet.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -57,6 +57,11 @@ a {
 a:hover {  }
 a:active {  }
 a:visited {  }
+form {
+	text-align: center;
+	width: 75vw;
+	margin:4rem auto;
+}
 
 /***************/
 /*   Classes   */
