Fixed more issues related to null values. Added a published text on the list productions page for if a production is published. Added disabled option as default on active faculty page

--- a/public/css/productions/list.css
+++ b/public/css/productions/list.css
@@ -11,8 +11,14 @@
 	position: absolute;
 	left:0rem;
 }
-.production-row__title" {
+.production-row__title {
 	display: inline;
+}
+.published {
+	transform: translate(-50%);
+	position: absolute;
+	top:100%;
+	left:50%;
 }
 .production-row-controls {
 	position: absolute;
