--- a/public/css/faculty/edit-active.css
+++ b/public/css/faculty/edit-active.css
@@ -3,7 +3,7 @@
 	font-size: 1.25rem;
 	line-height: 1.875;
 	width:80%;
-	margin:auto;
+	margin:1rem auto;
 }
 input[type="submit"] {
 	margin-top: 2rem;
