--- a/public/css/app.css
+++ b/public/css/app.css
@@ -136,6 +136,9 @@ form {
 .text-center {
 	text-align: center;
 }
+.text-underline {
+	text-decoration: underline;
+}
 .hidden {
     position: absolute;
     left: -10000px;
