--- a/public/css/contributors.css
+++ b/public/css/contributors.css
@@ -14,6 +14,7 @@ hgroup.departments {
 hgroup.role {
 	justify-content: space-between;
 	padding: 0rem 4rem;
+	margin-top:1rem;
 }
 hgroup.role > h4 {
 	margin:0rem;
@@ -22,5 +23,17 @@ hgroup.role > h4 {
 	margin: 2rem 4rem;
 	text-align: justify;
 	line-height: 1.875;
-	text-align:center;
+	text-align: justify;
+}
+.contributor__headshot {
+	display: block;
+	margin: 1rem auto;
+	width:175px;
+}
+@media only screen and (min-width: 790px) {
+	.contributor__headshot {
+		float: left;
+		margin-right:1.5rem;
+		width:100px;
+	}	
 }
