--- a/public/css/contributors.css
+++ b/public/css/contributors.css
@@ -14,26 +14,25 @@ hgroup.departments {
 hgroup.role {
 	justify-content: space-between;
 	padding: 0rem 4rem;
-	margin-top:1rem;
+	margin-top: 1rem;
 }
 hgroup.role > h4 {
 	margin:0rem;
 }
-.contributor__bio {
+.bio__text {
 	margin: 2rem 4rem;
-	text-align: justify;
 	line-height: 1.875;
-	text-align: justify;
+	text-align:justify;
 }
-.contributor__headshot {
+.bio__img {
 	display: block;
-	margin: 1rem auto;
-	width:175px;
+	margin: 1rem auto;;
+	width:300px;
 }
 @media only screen and (min-width: 790px) {
-	.contributor__headshot {
-		float: left;
+	.bio__img {
+		display: inline;
 		margin-right:1.5rem;
-		width:100px;
+		width:200px;
 	}	
 }
