--- a/public/css/app.css
+++ b/public/css/app.css
@@ -171,6 +171,10 @@ section[class $= "-section"] > p {
 .m-auto {
 	margin: auto;
 }
+.error {
+	color: red;
+	text-align:center;
+}
 
 /**************/
 /*   Header   */
