Admin can update faculty members active status. Admin can choose which, if any, role to assign to active faculty members. Public view of humber-theatre route displays all active faculty and separately active faculty with selected role

--- a/public/css/faculty/list.css
+++ b/public/css/faculty/list.css
@@ -2,20 +2,15 @@
 	text-align: center;
 	display: block;
 }
-.member-row {
-	position: relative;
-	text-align: center;
-	margin: 2.5rem 5rem;
+#active-faculty__text {
+	padding-left:2.5rem;
+	text-align: left;
 }
-.member-row__toggle {
-	position: absolute;
-	left:0rem;
+.member-row {
+	justify-content: space-between;
+	margin: 2.5rem 5rem;
+	gap:2rem;
 }
 .member-row__title {
-	display: inline;
-}
-.member-row-controls {
-	position: absolute;
-	display: inline;
-	right:0rem;
+	flex-grow: 1;
 }
