--- a/public/css/app.css
+++ b/public/css/app.css
@@ -60,8 +60,12 @@ a:active {  }
 a:visited {  }
 form {
 	text-align: center;
-	width: 75vw;
-	margin:4rem auto;
+	width: 90vw;
+	margin:1rem auto 4rem auto;
+}
+form > div[class $= "-input-row"] {
+	flex-direction:column;
+	gap: 1rem;
 }
 
 /***************/
@@ -96,7 +100,7 @@ form {
 	font-weight:600;
 }
 .add-btn-cont {
-	justify-content: right;
+	justify-content: center;
 	margin-bottom: 1rem;
 }
 .add-btn {
@@ -106,7 +110,7 @@ form {
 	width: 3rem;
 	height: 3rem;
 	padding:0.5rem;
-	margin-right: 5rem;
+	margin:auto;
 }
 .add-btn:hover {
 	background-color: var(--text-color);
@@ -157,6 +161,9 @@ section[class $= "-section"] > h3 {
 }
 section[class $= "-section"] > p {
 	font-size: 1.15rem;
+}
+#active-program__text {
+	display: none;
 }
 
 /*****************/
@@ -265,6 +272,26 @@ li.nav-sub-list__item {
 	}
 	li.nav-sub-list__item:hover > a {
 		color: var(--background-color);
+	}
+	.add-btn-cont {
+		justify-content: right;
+	}
+	.add-btn {
+		margin: unset;
+		margin-right: 5rem;
+	}
+	#active-program__text {
+		padding-left:2.5rem;
+		text-align: left;
+		display: block;
+	}
+	form {
+		margin: 4rem auto;
+	}
+	form > div[class $= "-input-row"] {
+		flex-direction:row;
+		gap: unset;
+		max-width:48rem;
 	}
 }
 @media only screen and (min-width: 1120px) {
