--- a/public/css/faculty-roles/edit.css
+++ b/public/css/faculty-roles/edit.css
@@ -1,11 +1,11 @@
-.role-row {
+.role-input-row {
 	justify-content: space-around;
 	margin:2.5rem auto;
 }
-.role-row > label {
+.role-input-row > label {
 	font-size:1.5rem;
 }
-.role-row > input {
+.role-input-row > input {
 	font-size:1.15rem;
 	padding: 0.25rem 0.5rem;
 }
