Added url helper functions to add contributor and update active program forms, allowing route to be found. Added text justify global style, removing it from page specific stylesheets. Moved Digital Program attribution to Acknowledgement page. Fixed issue of contributor role category header containing underscores

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -141,15 +141,18 @@ form > div[class $= "-input-row"] {
 .text-center {
 	text-align: center;
 }
+.text-justify {
+	text-align: justify;
+}
 .text-underline {
 	text-decoration: underline;
+}
+.text-upper {
+	text-transform: uppercase;
 }
 .hidden {
     position: absolute;
     left: -10000px;
-}
-.text-upper {
-	text-transform: uppercase;
 }
 section[class $= "-section"] {
 	width: 80%;
