--- a/public/css/app.css
+++ b/public/css/app.css
@@ -251,9 +251,11 @@ li.nav-sub-list__item {
 	}
 	.nav-list__item:hover {
 		background-color: var(--text-color);
+		cursor:pointer;
+	}
+	.nav-list__item:has(> ul.nav-sub-list):hover {
 		border-bottom-left-radius: 0rem;
 		border-bottom-right-radius: 0rem;
-		cursor:pointer;
 	}
 	.nav-list__item:hover > a {
 		color: var(--background-color);
