Production Preview now doesn't throw an error when certain items have been omitted about the production. Fixed an image sizing issue for the preview.

--- a/public/css/productions/preview.css
+++ b/public/css/productions/preview.css
@@ -11,6 +11,12 @@ form {
 	margin: 0rem auto;
 	text-align: right;
 }
+figure.program-poster {
+	margin: unset;
+}
+figure.program-poster > img {
+	width: 90vw;
+}
 .program-writer {
 	font-size: 1.15rem;
 }
@@ -66,6 +72,14 @@ dl {
 }
 section.special-thanks-section {
 	width: 70%;
+}
+@media only screen and (min-width: 660px) { 
+	figure.program-poster {
+		margin: auto;
+	}
+	figure.program-poster > img {
+		width: 20rem;
+	}
 }
 @media only screen and (min-width: 790px) {
 	.contributor-bio {
