--- a/public/css/app.css
+++ b/public/css/app.css
@@ -67,6 +67,62 @@ form > div[class $= "-input-row"] {
 	flex-direction:column;
 	gap: 1rem;
 }
+/* Custom Form Controls */
+input[type="radio"], input[type="checkbox"] {
+	position: relative;
+	appearance: none;
+	font-size: 24px;
+	overflow: hidden;
+}
+/* Custom Radio Button */
+input[type="radio"]:after {
+	content: "";
+	position: relative;
+	width: 1em;
+	height: 1em;
+	display: block;
+	border: 2px solid var(--text-color);
+	border-radius: 50%;
+	z-index: 2;
+}
+input[type="radio"]:checked::before {
+	content: "";
+	width: 0.5em;
+	height: 0.5em;
+	display: block;
+	position: absolute;
+	background-color: var(--text-color);
+	top: 0.25em;
+	left: 0.25em;
+	border-radius: 50%;
+	z-index: 1;
+}
+/* Custom Checkbox */
+input[type="checkbox"]::after {
+	content: "";
+	position: relative;
+	width: 1em;
+	height: 1em;
+	display: block;
+	outline: 2px solid var(--background-color);
+	outline-offset: -4px;
+	border: 2px solid var(--text-color);
+	border-radius: 15%;
+	z-index: 2;
+}
+input[type="checkbox"]:checked::before {
+	content: "";
+	width: 2em;
+	height: 1em;
+	display: block;
+	border: 2px solid var(--text-color);
+	position: absolute;
+	transform: rotate(45deg);
+	border-top-right-radius: 25%;
+	top: -0.75em;
+	left: -1em;
+	z-index: 1;
+}
 
 /***************/
 /*   Classes   */
