--- a/public/css/contributors/list.css
+++ b/public/css/contributors/list.css
@@ -44,7 +44,7 @@
 		position: relative;
 		margin: 2.5rem;
 	}
-	.contributor-row__toggle {
+	input.contributor-row__toggle {
 		transform: translateY(-50%);
 		margin-bottom: 0rem;
 		position: absolute;
@@ -64,7 +64,7 @@
 		flex-direction: row;
 		margin-bottom: 3.5rem;
 	}
-	.contributor-row__toggle {
+	input.contributor-row__toggle {
 		top: 28%;
 	}
 	.contributor-row__title {
@@ -80,7 +80,7 @@
 		margin: 2.5rem 5rem;
 		gap: 2rem;
 	}
-	.contributor-row__toggle {
+	input.contributor-row__toggle {
 		position: relative;
 		transform: unset;
 	}
